+ MGI-ify and clean up the apt-get installs
  - simplify the apt-get install command
  - include the libnss-sss package for MGI cluster usage

--- a/dockerize/Dockerfile
+++ b/dockerize/Dockerfile
@@ -7,10 +7,12 @@ VOLUME /release
 
 
 RUN apt-get update -qq \
-    && apt-get -y install apt-transport-https \
-    &&  apt-get install -y bzip2 \
-    &&  apt-get install -y git \
-    &&  apt-get install -y curl \
+    && apt-get -y install \
+        apt-transport-https \
+        bzip2 \
+        git \
+        curl \
+        libnss-sss \
     --no-install-recommends
 
 # https://serverfault.com/questions/683605/docker-container-timezone-will-not-reflect-changes
