+ include less and emacs
  - useful for developing and modifying things

--- a/dockerize/Dockerfile
+++ b/dockerize/Dockerfile
@@ -3,12 +3,12 @@ MAINTAINER Indraniel Das <idas@wustl.edu>
 
 # Volumes
 VOLUME /build
-VOLUME /release
-
 
 RUN apt-get update -qq \
     && apt-get -y install \
         apt-transport-https \
+        less \
+        emacs \
         bzip2 \
         git \
         ca-certificates \
